--- a/MarvelApp/MarvelApp/Detail/Character Detail/Character Specification /TableViewCell/CharacterSpecificationTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/Character Specification /TableViewCell/CharacterSpecificationTableViewCell.xib
@@ -4,12 +4,13 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CharacterSpecificationTableViewCell" rowHeight="985" id="KGk-i7-Jjw" customClass="CharacterSpecificationTableViewCell" customModule="MarvelApp" customModuleProvider="target">
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CharacterSpecificationTableViewCell" rowHeight="985" id="KGk-i7-Jjw" customClass="CharacterSpecificationTableViewCell" customModule="MarvelApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="985"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -24,7 +25,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HEIGHT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zve-kg-JKz">
                                         <rect key="frame" x="8" y="8" width="232" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                        <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -199,6 +200,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
                                     <constraint firstItem="xgn-dW-ILQ" firstAttribute="trailing" secondItem="efa-yk-igS" secondAttribute="trailing" id="0ed-xw-6dn"/>
                                     <constraint firstItem="ZNU-X2-QgP" firstAttribute="leading" secondItem="zve-kg-JKz" secondAttribute="leading" id="28p-8h-eDi"/>
@@ -288,6 +290,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="6AF-0e-iUE" secondAttribute="trailing" constant="30" id="MSA-gd-jh8"/>
                             <constraint firstItem="6AF-0e-iUE" firstAttribute="top" secondItem="cJg-7y-pK3" secondAttribute="top" constant="5" id="Mdw-oW-rDu"/>
@@ -311,4 +314,12 @@
             <point key="canvasLocation" x="140.57971014492756" y="459.70982142857139"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
