--- a/MarvelApp/MarvelApp/Detail/Character Detail/Header/CollectionViewCell/HeaderCollectionViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/Header/CollectionViewCell/HeaderCollectionViewCell.xib
@@ -10,21 +10,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HeaderCollectionViewCell" id="gTV-IL-0wX" customClass="HeaderCollectionViewCell" customModule="MarvelApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="170" height="220"/>
+            <rect key="frame" x="0.0" y="0.0" width="179" height="225"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="170" height="220"/>
+                <rect key="frame" x="0.0" y="0.0" width="179" height="225"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Imagem 59" translatesAutoresizingMaskIntoConstraints="NO" id="T2B-Kd-Drk">
-                        <rect key="frame" x="0.0" y="0.0" width="170" height="220"/>
+                        <rect key="frame" x="0.0" y="0.0" width="179" height="225"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="220" id="c2Q-Af-HyA"/>
-                            <constraint firstAttribute="width" constant="170" id="l9U-ma-Uuj"/>
+                            <constraint firstAttribute="width" constant="179" id="l9O-7k-tab"/>
+                            <constraint firstAttribute="height" constant="225" id="mjz-lP-ohx"/>
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon awesome-search" translatesAutoresizingMaskIntoConstraints="NO" id="3wp-Mi-bgh">
-                        <rect key="frame" x="146" y="195" width="20" height="20"/>
+                        <rect key="frame" x="155" y="200" width="20" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="BwL-vq-xIA"/>
                             <constraint firstAttribute="width" constant="20" id="NWa-ii-jhc"/>
