--- a/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/Header/TableView Cell/HeaderTableViewCell.xib
@@ -13,7 +13,7 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HeaderTableViewCell" rowHeight="718" id="KGk-i7-Jjw" customClass="HeaderTableViewCell" customModule="MarvelApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="718"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="390" height="718"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
@@ -34,33 +34,33 @@
                         <rect key="frame" x="40" y="229" width="310" height="230.66666666666663"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NOME PERSONAGEM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRS-9T-COa">
-                                <rect key="frame" x="0.0" y="0.0" width="310" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                <rect key="frame" x="0.0" y="0.0" width="310" height="17.666666666666668"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TEMPESTADEEEEE" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mti-yc-F6c">
-                                <rect key="frame" x="0.0" y="21.333333333333343" width="310" height="116"/>
+                                <rect key="frame" x="0.0" y="18.666666666666657" width="310" height="116"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="116" id="h1X-hg-tyb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="46"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="yxF-He-Aa0">
-                                <rect key="frame" x="0.0" y="138.33333333333331" width="310" height="30"/>
+                                <rect key="frame" x="0.0" y="135.66666666666669" width="310" height="30"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HOG-ds-TRb">
-                                        <rect key="frame" x="0.0" y="12.666666666666686" width="172.33333333333334" height="5"/>
+                                        <rect key="frame" x="0.0" y="12.666666666666629" width="147.33333333333334" height="5"/>
                                         <color key="backgroundColor" systemColor="systemBlueColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="5" id="F7Q-UO-AEC"/>
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorited Character" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bmf-2A-V4Y">
-                                        <rect key="frame" x="175.33333333333334" y="8" width="111.66666666666666" height="14.333333333333336"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <rect key="frame" x="150.33333333333337" y="7" width="136.66666666666663" height="16.333333333333332"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="14"/>
                                         <color key="textColor" red="0.57647866010000004" green="0.57645630839999995" blue="0.5764713883" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -82,9 +82,9 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descricaoooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iqP-V8-tZj">
-                                <rect key="frame" x="0.0" y="169.33333333333331" width="310" height="61.333333333333343"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <rect key="frame" x="0.0" y="166.66666666666669" width="310" height="64"/>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
+                                <color key="textColor" red="0.54902726410000002" green="0.54900586610000002" blue="0.54902035000000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -96,14 +96,14 @@
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="230.5" id="bR8-7W-iNe"/>
                         </constraints>
                     </stackView>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aN3-7F-hbP">
-                        <rect key="frame" x="0.0" y="479" width="390" height="224"/>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="aN3-7F-hbP">
+                        <rect key="frame" x="0.0" y="478.66666666666674" width="390" height="235"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="224" id="lFE-T3-AwV"/>
+                            <constraint firstAttribute="height" constant="235" id="lFE-T3-AwV"/>
                         </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="EGP-GP-0NA">
-                            <size key="itemSize" width="170" height="220"/>
+                            <size key="itemSize" width="179" height="224"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
