--- a/MarvelApp/MarvelApp/Detail/Character Detail/Biography/TableViewCell/BiographyTableViewCell.xib
+++ b/MarvelApp/MarvelApp/Detail/Character Detail/Biography/TableViewCell/BiographyTableViewCell.xib
@@ -4,49 +4,49 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BiographyTableViewCell" rowHeight="788" id="KGk-i7-Jjw" customClass="BiographyTableViewCell" customModule="MarvelApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="788"/>
+        <tableViewCell userInteractionEnabled="NO" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BiographyTableViewCell" rowHeight="50" id="KGk-i7-Jjw" customClass="BiographyTableViewCell" customModule="MarvelApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="788"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AA0-Vg-PVV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="788"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Biography" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjO-ea-eoy">
-                                <rect key="frame" x="25" y="15" width="198" height="24"/>
+                                <rect key="frame" x="25" y="2" width="198" height="24"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="24" id="4h7-cV-CkK"/>
                                     <constraint firstAttribute="width" constant="198" id="56R-Jg-0Ip"/>
+                                    <constraint firstAttribute="height" constant="24" id="zXj-BA-Odv"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="16"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KZh-Do-fby">
-                                <rect key="frame" x="25" y="41" width="270" height="747"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Ex xercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariaturut aliquip ex ea commodo consequat. Duis aute irure dolor in velit esse cillum dolore eu fugiat nulla pariatur. Ex xercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in aboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit .</string>
-                                <color key="textColor" systemColor="labelColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msk-if-kA8">
+                                <rect key="frame" x="25" y="26" width="270" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="xt4-o0-cRq"/>
+                                </constraints>
+                                <mutableString key="text"> Testeeeeevddvdvdvfdvdvdvdfvdvsvvdfvdfsvfdvcdfvdfbvfgbhhglfv,fdvpov;ksdf,vpdtov.dfvpfdlvdt.pv[ldfpv[dlvfdp;v.vpt[lgrtgptlgrgvvbfgbgyiomfisosmcafcvoeimvfgovmvctvodmvvfkvsovidmfvibfbnyiubdfjgtigojdmdvdvfdimnbvgfobfomtfovbfibmvfgvfgobgbnmnfgobmbcvkmfgsvmsvoirmasdocefvmervoesm,ovsfmbriovsdfmdiosfbgbiufgnvsfiuvfgiusfbnvnsfiunsnnsiuvrsnvsiuvnsviufsvsdfiuvfnvfiuvsfnvnfnivfsbvsfiuvfdp;v.vpt[lgrtgptlgrgvvbfgbgyiomfisosmcafcvoeimvfgovmvctvodmvvfkvsovidmfvibfbnyiubdfjgtigojdmdvdvfdimnbvgfobfomtfovbfibmvfgvfgobgbnmnfgobmbcvkmfgsvmsvoirmasdocefvmervoesm,ovsfmbriovsdfmdiosfbgbiufgnvsfiuvfgiusfbnvnsfiunsnnsiuvrsnvsiuvnsviufsvsdfiuvfnvfiuvsfnvnfnivfsbvsfiuvsnvsnvsfdivbsfdvisflamet, adipisicing pecu, FIMMM</mutableString>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="height" constant="788" id="2m1-CD-UiB"/>
-                            <constraint firstAttribute="bottom" secondItem="KZh-Do-fby" secondAttribute="bottom" id="9xf-Tr-8Xk"/>
-                            <constraint firstItem="hjO-ea-eoy" firstAttribute="top" secondItem="AA0-Vg-PVV" secondAttribute="top" constant="15" id="a5X-MO-Dm1"/>
-                            <constraint firstItem="KZh-Do-fby" firstAttribute="top" secondItem="hjO-ea-eoy" secondAttribute="bottom" constant="2" id="bJO-Ga-RA6"/>
-                            <constraint firstItem="hjO-ea-eoy" firstAttribute="leading" secondItem="KZh-Do-fby" secondAttribute="leading" id="dzT-f2-Yo5"/>
-                            <constraint firstAttribute="trailing" secondItem="KZh-Do-fby" secondAttribute="trailing" constant="25" id="lV1-Hc-Xoz"/>
-                            <constraint firstItem="KZh-Do-fby" firstAttribute="leading" secondItem="AA0-Vg-PVV" secondAttribute="leading" constant="25" id="yea-2Q-Ylz"/>
+                            <constraint firstAttribute="trailing" secondItem="msk-if-kA8" secondAttribute="trailing" constant="25" id="1gx-Mu-J4s"/>
+                            <constraint firstAttribute="bottom" secondItem="msk-if-kA8" secondAttribute="bottom" id="A3h-nF-CmI"/>
+                            <constraint firstItem="msk-if-kA8" firstAttribute="top" secondItem="hjO-ea-eoy" secondAttribute="bottom" id="Mgz-5n-NrY"/>
+                            <constraint firstItem="hjO-ea-eoy" firstAttribute="top" secondItem="AA0-Vg-PVV" secondAttribute="top" constant="2" id="a5X-MO-Dm1"/>
+                            <constraint firstItem="msk-if-kA8" firstAttribute="leading" secondItem="hjO-ea-eoy" secondAttribute="leading" id="aak-uH-CoI"/>
+                            <constraint firstItem="hjO-ea-eoy" firstAttribute="leading" secondItem="AA0-Vg-PVV" secondAttribute="leading" constant="25" id="dML-SI-e9x"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -59,18 +59,9 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="descriptionTextView" destination="KZh-Do-fby" id="fQR-Cp-XcY"/>
                 <outlet property="titleLabel" destination="hjO-ea-eoy" id="aaK-we-GRt"/>
             </connections>
-            <point key="canvasLocation" x="140.57971014492756" y="393.75"/>
+            <point key="canvasLocation" x="140.57971014492756" y="145.98214285714286"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <systemColor name="labelColor">
-            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
